# YappR

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  alembic.ini  default.nix  devenv.nix  docker-compose.yml  entrypoint.sh  flake.nix  gunicorn_config.py  logo.xcf  main.py  package.json  parse.py  pnpm-lock.yaml  pyproject.toml  tasks.py  test_rust_search.py  tsconfig.json
app/: __init__.py  app_factory.py  bot.py  cache.py  chatlogparse.py  content_queue.py  csrf.py  logger.py  main.py  parse.py  permissions.py  rate_limit.py  redis_client.py  repository.py  retrievers.py  routes.py  search.py  shared.py  tasks.py  test.py  transcribe.py  twitch_api.py  twitch_client.py  twitch_client_factory.py  utils.py  youtube_api.py
app/auth/: __init__.py  discord.py  twitch.py
app/db/: env.py  script.py.mako
app/db/versions/: 038f881fd4f3_user_comments_to_submissions.py  0a63df7fd2db_add_content_rating.py  0fb4193593f2_stricter_types.py  106db04acf33_discord_thread_settings.py  13c1bfc99f1a_convert_segment_content_to_text.py  19b7bf30c76b_enable_pg_vector_extension.py  1ba987b9aa33_broadcaster_settings_and_change_content_.py  1d74721bf16b_external_user_settings.py  2116bd55af44_.py  222523337603_add_previous_next_segments.py  24e5a3473bf0_.py  27ea41469d7f_add_audio_file.py  28f74a2de022_add_upload_date_to_videos.py  2a0d6e63242f_.py  2bbe1f8736f5_.py  2ea5da67d56d_oauth2.py  40bdde12a9e8_.py  41d6cc75e8a5_add_moderator_role.py  44cc14619ec1_add_logs.py  46ea97a05a39_oauth.py  49e411768e00_add_users.py  50da5760d226_add_platform_channel_id_for_internal_.py  56e843841da9_add_source_video_and_campaign_ref.py  570cd43305f5_add_platform_branding_color.py  5d422431f522_add_permissions.py  5da1eee4d713_add_web_as_content_submission_source.py  63e0e0cc0442_thumbnail_optional.py  663ea34e3293_add_avatar_url_to_user.py  6779d6724136_add_missing_user_link_in_permissions2.py  689e958b6177_thumbnail.py  6d115ce78e09_contentqueue_add_missing_submission_ref.py  6fdd09df45ff_add_missing_user_link_in_permissions3.py  70de17b93b2e_add_processed_tag_on_transcriptions.py  767128e66291_make_segment_endtime_required.py  7b4c3f928560_add_timestamp_to_content_submissions.py  815751c768a9_.py  8197cf48587e_oauth.py  86be0e8d0d7b_thumbnail_optional.py  8b53509b9088_user_broadcaster_mapping.py  8ff428eff057_remove_logs_and_wordmaps.py  (+36 more)
app/models/: __init__.py  auth.py  bot_tasks.py  broadcaster.py  channel.py  chatlog.py  config.py  content_queue.py  content_queue_settings.py  db.py  enums.py  old_db.py  platform.py  repository.py  search.py  timestamp_mapping.py  transcription.py  user.py  utils.py  video.py  youtube.py  yt.py
app/models/youtube/: captions.py  channel.py  playlist.py  search.py  video.py
app/routes/: broadcaster.py  channel.py  clip_queue.py  leaderboard.py  management.py  root.py  search.py  transcription.py  users.py  utils.py  video.py
app/rust/: lib.rs
app/services/: __init__.py  broadcaster.py  channel.py  content_queue.py  file_recovery.py  moderation.py  platform.py  title_parser.py  transcription.py  user.py  video.py  video_date_estimation.py
app/static/: cookie-config.js  privacy_policy.html  terms_and_conditions.html
app/templates/: about.html  active_tasks.html  add_content.html  banned.html  base.html  broadcaster_add.html  broadcaster_edit.html  broadcaster_events.html  broadcaster_queue.html  broadcasters.html  channel_edit.html  chart.html  chatlog_search.html  clip_details.html  clip_player.html  clip_queue.html  clip_queue_items.html  clip_queue_v2.html  content_queue.html  external_user.html  index.html  leaderboard.html  management.html  management_items.html  platforms.html  promo.html  release_button.html  result.html  search.html  search_module.html  stats.html  temp.html  unauthorized.html  user_detail.html  user_edit.html  users.html  utils.html  video.html  video_chatlogs.html  video_edit.html  (+1 more)
app/templates/components/: balloon_feedback.html  ban_modal.html  moderation_history.html  role_modal.html  unban_modal.html  user_moderation_status.html  user_roles.html  user_roles_display.html  user_submissions.html  users_table.html  view_roles_modal.html
app/templates/errors/: 401.html  404.html  500.html  generic.html
app/ts/: balloon_feedback.ts  htmx-config.ts  styles.css  vendor.ts
bot/: __init__.py  discord.py  main.py  platform_handlers.py  shared.py  twitch.py
bot/tests/: test_url_detection.py
frontend/: add-content.ts  baloon.css  broadcaster-add.ts  broadcaster-edit.ts  clip-queue-v2.ts  clip-queue.css  clip-queue.ts  global.d.ts  htmx-config.ts  management.ts  search-results.ts  search.ts  stats.ts  styles.css  theme-toggle.ts  utils.ts  vendor.ts  video-edit.ts  video.ts  yappr-wasm.ts
models/: config.py  db.py  yt.py
scripts/: copy-assets.sh
src/: broadcaster_add.rs  broadcaster_edit.rs  broadcaster_events.rs  chat_image_generator.rs  chat_tag_manager.rs  chat_timeline_chart.rs  chatlog_search.rs  generic_table.rs  lib.rs  platforms.rs  transcription_table.rs  utils.rs
src/bots/: Cargo.toml  mod.rs  twitch_auth.rs  websocket.rs
src/bots/src/: lib.rs  twitch_auth.rs  twitch_bot.rs  websocket.rs
src/cli/: Cargo.toml
src/cli/src/: db_cli.rs
src/entities/: broadcaster_settings.rs  channels.rs  chatlog_imports.rs  chatlogs.rs  mod.rs  timestamp_mapping.rs  user_channel_roles.rs  user_weights.rs
src/services/: mod.rs  user.rs
src/shared/: Cargo.toml
src/shared/src/: chatlog_parser.rs  database.rs  lib.rs  types.rs
src/wasm/: Cargo.toml
src/wasm/src/: broadcaster_add.rs  broadcaster_edit.rs  (+3 more)
src/web/: Cargo.toml
templates/: base.html  broadcaster_edit.html  broadcasters.html  channel_edit.html  chart.html  index.html  platforms.html  search.html  video_edit.html
tests/: conftest.py  test_bot_shared.py  test_url_detection.py
tests/app/: __init__.py  test_app_home.py  test_app_unauthenticated.py  test_auth.py  test_channel_service.py  test_chatlogparse.py  test_models.py  test_permissions.py  test_platform_handler.py  test_search.py  test_search_performance.py  test_utils.py
(+19 files in other folders)
