[package]
name = "yappr-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen-futures = "0.4.50"
gloo-net = "0.6.0"
charming = { version = "0.6.0", features = ["wasm"] }
gloo = "0.11.0"
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "Node",
  "HtmlElement",
  "HtmlInputElement", 
  "HtmlTextAreaElement",
  "HtmlCanvasElement",
  "HtmlSelectElement",
  "HtmlButtonElement",
  "HtmlAnchorElement",
  "CanvasRenderingContext2d",
  "NodeList",
  "Window",
  "Storage",
  "CssStyleDeclaration",
  "HtmlCollection",
  "MouseEvent",
  "EventTarget",
  "Event",
  "PointerEvent",
  "DomRect",
  "Location",
  "Blob",
  "BlobPropertyBag",
  "Url",
  "FileList",
  "CustomEvent",
]

[profile.release]
lto = true
opt-level = "s"
