[package]
name = "yappr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "db_cli"
path = "src/bin/db_cli.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen-futures = "0.4.50"
gloo-net = "0.6.0"
charming = { version = "0.6.0", features = ["wasm"] }
gloo = "0.11.0"
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
twitch_api = { version = "0.7", features = ["client", "eventsub", "helix", "reqwest"] }
twitch_oauth2 = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = "0.24"
futures = "0.3"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"
async-trait = "0.1.89"
sea-orm = { version = "1.1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "Node",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlCanvasElement",
  "HtmlSelectElement",
  "HtmlButtonElement",
  "HtmlAnchorElement",
  "HtmlFormElement",
  "HtmlOptionElement",
  "HtmlOptionsCollection",
  "FormData",
  "File",
  "DomTokenList",
  "CanvasRenderingContext2d",
  "NodeList",
  "Window",
  "Storage",
  "CssStyleDeclaration",
  "HtmlCollection",
  "MouseEvent",
  "EventTarget",
  "Event",
  "InputEvent",
  "PointerEvent",
  "DomRect",
  "Location",
  "Blob",
  "BlobPropertyBag",
  "Url",
  "FileList",
  "CustomEvent",
  "Request",
  "RequestInit",
  "Headers",
  "Response",
]

[profile.release]
lto = true
opt-level = "s"
