[workspace]
resolver = "2"
members = ["src/shared", "src/web", "src/bots", "src/cli"]

[workspace.dependencies]
axum = "0.8.4"
chrono = "0.4.42"
chrono-tz = "0.8"
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
futures = "0.3"
regex = "1.11.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots", "native-tls", "url"] }
tracing = "0.1"
tracing-subscriber = "0.3"
twitch_api = { version = "0.7", features = ["client", "eventsub", "helix", "reqwest"] }
twitch_oauth2 = "0.15"
url = "2.5"
sea-orm = { version = "1.1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

[[workspace.metadata.leptos]]
name = "web"
bin-target = "web"
bin-package = "web"
lib-package = "web"
site-root = "web/target/site"
assets-dir = "web/public"
site-addr = "127.0.0.1:3000"
reload-port = 3001

# [[workspace.metadata.leptos]] 
# name = "yappr"
# bin-target = "yappr"
# bin-package = "yappr"
# lib-package = "yappr"

# [features]
# console_error_panic_hook = ["dep:console_error_panic_hook"]
# hydrate = [
#     "leptos/hydrate",
#     "dep:console_error_panic_hook",
#     "dep:wasm-bindgen",
# ]
# ssr = [
#     "dep:leptos_axum",
#     "leptos/ssr",
#     "leptos_meta/ssr",
#     "leptos_router/ssr",
# ]

# [profile.wasm-release]
# inherits = "release"
# opt-level = 'z'
# lto = true
# codegen-units = 1
# panic = "abort"

# [package.metadata.leptos]
# site-root = "leptos/target/site"
# assets-dir = "leptos/public"
# site-addr = "127.0.0.1:3000"
# reload-port = 3001
# browserquery = "defaults"
# env = "DEV"
# bin-features = ["ssr"]
