[project]
name = "YappR"
version = "0.1.0"
description = "A self-hosted, open-source project for searching through transcriptions on YouTube channels"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "apache-libcloud>=3.8.0",
    "bootstrap-flask>=2.4.2",
    "celery>=5.4.0",
    "celery-stubs>=0.1.3",
    "fasteners>=0.19",
    "flask>=3.1.0",
    "flask-discord>=0.1.69",
    "flask-nav>=0.6",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "nltk>=3.9.1",
    "psycopg[binary]>=3.2.6",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-file>=0.6.0",
    "webvtt-py>=0.5.1",
    "yt-dlp>=2025.3.27",
]
