[project]
name = "YappR"
version = "0.1.0"
description = "A self-hosted, open-source project for searching through transcriptions on YouTube channels"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "apache-libcloud>=3.8.0",
    "bootstrap-flask>=2.4.2",
    "celery>=5.4.0",
    "celery-stubs>=0.1.3",
    "fasteners>=0.19",
    "flask>=3.1.0",
    "flask-dance[sqla]>=7.1.0",
    "flask-limiter>=3.12",
    "flask-login>=0.6.3",
    "flask-nav>=0.6",
    "flask-sqlalchemy>=3.1.1",
    "google-api-python-client>=2.166.0",
    "google-api-python-client-stubs>=1.29.0",
    "gunicorn>=23.0.0",
    "jq>=1.8.0",
    "langchain-community>=0.3.23",
    "langchain-postgres>=0.0.13",
    "langchain[ollama]>=0.3.25",
    "nltk>=3.9.1",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "pytimeparse>=1.1.8",
    "redis>=5.2.1",
    "retry>=0.9.2",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-file>=0.6.0",
    "sqlalchemy-utils>=0.41.2",
    "twitchapi>=4.4.0",
    "webvtt-py>=0.5.1",
    "youtube-transcript-api>=1.0.3",
    "yt-dlp>=2025.3.27",
]

[dependency-groups]
dev = [
    "whisperx>=3.3.4",
]
worker = [
    "whisperx>=3.3.4",
]
