[project]
name = "YappR"
version = "0.1.0"
description = "A self-hosted, open-source project for searching through transcriptions on YouTube channels"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "apache-libcloud>=3.8.0",
    "celery>=5.4.0",
    "celery-stubs>=0.1.3",
    "discord-py>=2.5.2",
    "fasteners>=0.19",
    "flask>=3.1.0",
    "flask-caching>=2.3.1",
    "flask-cors>=6.0.0",
    "flask-dance[sqla]>=7.1.0",
    "flask-limiter>=3.12",
    "flask-login>=0.6.3",
    "flask-nav>=0.6",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "google-api-python-client>=2.166.0",
    "google-api-python-client-stubs>=1.29.0",
    "gunicorn>=23.0.0",
    "jq>=1.8.0",
    "loki-logger-handler>=1.1.2",
    "nltk>=3.9.1",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.3",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-docker>=3.2.2",
    "python-dotenv>=1.1.0",
    "pytimeparse>=1.1.8",
    "redis>=5.2.1",
    "retry>=0.9.2",
    "sqlalchemy[mypy]>=2.0.40",
    "sqlalchemy-file>=0.6.0",
    "sqlalchemy-utils>=0.41.2",
    "testcontainers[postgresql]>=4.10.0",
    "twitchapi>=4.4.0",
    "types-flask-cors>=6.0.0.20250520",
    "types-flask-socketio>=5.5.0.20250516",
    "types-requests>=2.32.0.20250602",
    "webvtt-py>=0.5.1",
    "youtube-transcript-api>=1.1.0",
    "yt-dlp>=2025.3.27",
]

[dependency-groups]
dev = [
    "whisperx>=3.3.4",
    "twitchapi>=4.4.0",
    "docker>=7.1.0",
    "mypy>=1.17.0",
]
worker = [
    "whisperx>=3.3.4",
]
bot = [
    "twitchapi>=4.4.0",
]

[tool.mypy]
exclude = [
    "test_db",
]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
]
